@@ -1,23 +1,16 @@
-FROM amazonlinux:2
-ARG version=17.0.10.7-1
+FROM amazoncorretto:17-alpine3.18 as builder-jre
 
-RUN set -eux \
-    && export GNUPGHOME="$(mktemp -d)" \
-    && curl -fL -o corretto.key https://yum.corretto.aws/corretto.key \
-    && gpg --batch --import corretto.key \
-    && gpg --batch --export --armor '6DC3636DAE534049C8B94623A122542AB04F24E3' > corretto.key \
-    && rpm --import corretto.key \
-    && rm -r "$GNUPGHOME" corretto.key \
-    && curl -fL -o /etc/yum.repos.d/corretto.repo https://yum.corretto.aws/corretto.repo \
-    && grep -q '^gpgcheck=1' /etc/yum.repos.d/corretto.repo \
-    && echo "priority=9" >> /etc/yum.repos.d/corretto.repo \
-    && yum install -y java-17-amazon-corretto-devel-$version \
-    && (find /usr/lib/jvm/java-17-amazon-corretto -name src.zip -delete || true) \
-    && yum install -y fontconfig \
-    && yum clean all
+RUN apk add --no-cache --repository=http://dl-cdn.alpinelinux.org/alpine/edge/main/ binutils=2.41-r0
 
-ENV LANG C.UTF-8
-ENV JAVA_HOME=/usr/lib/jvm/java-17-amazon-corretto
+RUN $JAVA_HOME/bin/jlink \
+         --module-path "$JAVA_HOME/jmods" \
+         --verbose \
+         --add-modules ALL-MODULE-PATH \
+         --strip-debug \
+         --no-man-pages \
+         --no-header-files \
+         --compress=2 \
+         --output /jre
 
 #VOLUME /tmp
 
